<!--
  ~ Copyright (c) 2021.   # COMP 4521 #
  ~ # SHEN, Ye #	 20583137	yshenat@connect.ust.hk
  ~ # ZHOU, Ji #	 20583761	jzhoubl@connect.ust.hk
  ~ # WU, Sik Chit #	 20564571	scwuaa@connect.ust.hk
  -->

<resources>
    <string name="app_name">Cater</string>
    <string name="nav_header_title">Not Login</string>
    <string name="nav_header_subtitle">Please login in or register to continue.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_me">Me</string>

    <!-- Text for the exception message in FragmentCommunicate. -->
    <string name="exception_message">must implement OnFragmentInteractionListener</string>

    <!-- Text for Map fragment. -->
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="button_refresh">Refresh</string>
    <string name="marker_refresh">Search Nearby Users</string>
    <string name="marker_clear">Clear All Markers</string>
    <string name="map_type_notify">Already in this type.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_regular_pattern"><![CDATA[(?<=\\()\\d+(?=\\))]]></string>
    <string name="button_remove">button remove</string>
    <string name="default_name">Default_Name</string>
    <string name="default_description">Default_Description</string>
    <string name="button_chat">Chat</string>
    <string name="profile_photo">Profile photo</string>

    <array name="profile_photos">
        <item>@drawable/default_1</item>
        <item>@drawable/default_2</item>
        <item>@drawable/default_3</item>
        <item>@drawable/default_4</item>
        <item>@drawable/default_5</item>
        <item>@drawable/default_6</item>
        <item>@drawable/default_7</item>
        <item>@drawable/default_8</item>
    </array>

    <array name="photos">
        <item>default_1</item>
        <item>default_2</item>
        <item>default_3</item>
        <item>default_4</item>
        <item>default_5</item>
        <item>default_6</item>
        <item>default_7</item>
    </array>

    <!-- Text for Me fragment. -->
    <string name="user_icon">user_icon</string>
    <string name="user_name">Name: </string>
    <string name="user_age">Age: </string>
    <string name="user_id">uid: </string>
    <string name="user_tag">Tag</string>
    <string name="user_description">Please login in or register to continue</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_phone">Enter phone</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid phone number</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed! Please check the phone number or password."</string>
    <string name="button_login_register">Login/Register</string>
    <string name="register">Register</string>
    <string name="setting">Edit Profile</string>
    <string name="save">save</string>
    <string name="logout">logout</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="time">Time</string>
    <string name="from_now_12_00">From now(12:00)</string>
    <string name="reserve">Reserve</string>
    <string name="not_login">Not Login</string>
    <string name="name">name</string>
    <string name="_1500m">1500m</string>
    <string name="search">SEARCH</string>
    <string name="invitation">invitation</string>

    <string-array name="phone_array">
        <item>+852</item>
        <item>+86</item>
    </string-array>

    <!-- Text for Home fragment. -->

</resources>