...
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/ic_menu_me"
            android:title="@string/menu_me" />
    </group>
</menu>
